--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <link rel="stylesheet" href="/css/styles.css" />
     <title>D&D 5.0 Spell Catalog</title>
   </head>
-  <body></body>
+  <body>
+    <script src="/js/main.js"></script>
+  </body>
 </html>
