--- a/index.html
+++ b/index.html
@@ -3,12 +3,71 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="/css/base.css" />
     <link rel="stylesheet" href="/css/theme.css" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>D&D 5.0 Spell Catalog</title>
+    <title>D&D 5e Spell Catalog</title>
   </head>
   <body>
+    <main class="site-wrapper">
+      <section class="top-section">
+        <div class="logo-wrapper">
+          <h1>D&D 5e Spells</h1>
+        </div>
+        <div class="searchbar">
+          <input type="text" name="search" placeholder="search spells..." />
+        </div>
+      </section>
+      <section class="bottom-section">
+        <div class="sidebar">
+          <h2>Filter by Class</h2>
+          <div class="horizontal-divider"></div>
+          <ul class="class-filters">
+            <li>Sorcerer</li>
+            <li>Wizard</li>
+            <li>Cleric</li>
+            <li>Druid</li>
+            <li>Paladin</li>
+          </ul>
+          <h2>Filter by Level</h2>
+          <div class="horizontal-divider"></div>
+          <div class="level-filter">
+            <div class="level-control">
+              <i class="fas fa-minus"></i>
+            </div>
+            <div class="current-level-filter">1</div>
+            <div class="level-control">
+              <i class="fas fa-plus"></i>
+            </div>
+          </div>
+        </div>
+        <div class="spell-list">
+          <div class="spells">
+            <div class="spell-block">
+              <div class="fav"><i class="fas fa-star"></i></div>
+              <h3>Fireball</h3>
+              <div class="spell-level">Lv. 3</div>
+              <div class="spell-school round-pill">Evocation</div>
+            </div>
+          </div>
+          <ul class="spell-list-controls">
+            <li><i class="fas fa-chevron-left"></i></li>
+            <li class="curent-page">1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>...</li>
+            <li><i class="fas fa-chevron-right"></i></li>
+          </ul>
+        </div>
+      </section>
+    </main>
     <script src="/js/main.js"></script>
   </body>
 </html>
