--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
   </head>
   <body>
     <main class="site-wrapper">
-      <section class="top-section">
+      <section class="top-section container">
         <div class="logo-wrapper">
           <h1>D&D 5e Spells</h1>
         </div>
         <div class="searchbar">
           <input type="text" name="search" placeholder="search spells..." />
+          <i class="fas fa-search"></i>
         </div>
       </section>
       <section class="bottom-section">
