--- a/index.html
+++ b/index.html
@@ -19,25 +19,40 @@
     <main class="site-wrapper">
       <section class="top-section container">
         <div class="logo-wrapper">
-          <h1>D&D 5e Spells</h1>
+          <h1 class="header-md">D&D 5e Spells</h1>
         </div>
         <div class="searchbar">
           <input type="text" name="search" placeholder="search spells..." />
           <i class="fas fa-search"></i>
         </div>
       </section>
-      <section class="bottom-section">
+      <section class="bottom-section container">
         <div class="sidebar">
-          <h2>Filter by Class</h2>
+          <h2 class="header-sm">Filter by Class</h2>
           <div class="horizontal-divider"></div>
           <ul class="class-filters">
-            <li>Sorcerer</li>
-            <li>Wizard</li>
-            <li>Cleric</li>
-            <li>Druid</li>
-            <li>Paladin</li>
+            <li>
+              <p>Sorcerer</p>
+              <p>(31)</p>
+            </li>
+            <li>
+              <p>Wizard</p>
+              <p>(18)</p>
+            </li>
+            <li>
+              <p>Cleric</p>
+              <p>(9)</p>
+            </li>
+            <li>
+              <p>Druid</p>
+              <p>(12)</p>
+            </li>
+            <li>
+              <p>Paladin</p>
+              <p>(2)</p>
+            </li>
           </ul>
-          <h2>Filter by Level</h2>
+          <h2 class="header-sm">Filter by Level</h2>
           <div class="horizontal-divider"></div>
           <div class="level-filter">
             <div class="level-control">
@@ -47,6 +62,9 @@
             <div class="level-control">
               <i class="fas fa-plus"></i>
             </div>
+          </div>
+          <div class="favorites-filter round-pill">
+            <h2 class="header-sm">Favorites</h2>
           </div>
         </div>
         <div class="spell-list">
