--- a/index.html
+++ b/index.html
@@ -75,10 +75,40 @@
               <div class="spell-level">Lv. 3</div>
               <div class="spell-school round-pill">Evocation</div>
             </div>
+            <div class="spell-block">
+              <div class="fav"><i class="fas fa-star"></i></div>
+              <h3>Fireball</h3>
+              <div class="spell-level">Lv. 3</div>
+              <div class="spell-school round-pill">Evocation</div>
+            </div>
+            <div class="spell-block">
+              <div class="fav"><i class="fas fa-star"></i></div>
+              <h3>Fireball</h3>
+              <div class="spell-level">Lv. 3</div>
+              <div class="spell-school round-pill">Evocation</div>
+            </div>
+            <div class="spell-block">
+              <div class="fav"><i class="fas fa-star"></i></div>
+              <h3>Fireball</h3>
+              <div class="spell-level">Lv. 3</div>
+              <div class="spell-school round-pill">Evocation</div>
+            </div>
+            <div class="spell-block">
+              <div class="fav"><i class="fas fa-star"></i></div>
+              <h3>Fireball</h3>
+              <div class="spell-level">Lv. 3</div>
+              <div class="spell-school round-pill">Evocation</div>
+            </div>
+            <div class="spell-block">
+              <div class="fav"><i class="fas fa-star"></i></div>
+              <h3>Fireball</h3>
+              <div class="spell-level">Lv. 3</div>
+              <div class="spell-school round-pill">Evocation</div>
+            </div>
           </div>
           <ul class="spell-list-controls">
             <li><i class="fas fa-chevron-left"></i></li>
-            <li class="curent-page">1</li>
+            <li class="current-page">1</li>
             <li>2</li>
             <li>3</li>
             <li>...</li>
