theme tab html and css

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
   </head>
   <body>
     <main class="site-wrapper">
+      <div class="theme-tab open">
+        <p>Theme</p>
+        <div class="theme-buttons">
+          <button class="light">Light</button><button class="dark">Dark</button>
+        </div>
+        <i class="fas fa-chevron-right"></i>
+      </div>
       <section class="top-section container">
         <div class="logo-wrapper">
           <h1>D&D 5e Spells</h1>
