filters and pagination

--- a/index.html
+++ b/index.html
@@ -35,40 +35,15 @@
       </section>
       <section class="bottom-section container">
         <div class="sidebar">
-          <h2>Filter by Class</h2>
+          <h2>Filter by School</h2>
           <div class="horizontal-divider"></div>
           <ul class="class-filters">
-            <li>
-              <p>Sorcerer</p>
-              <p>(31)</p>
-            </li>
-            <li>
-              <p>Wizard</p>
-              <p>(18)</p>
-            </li>
-            <li>
-              <p>Cleric</p>
-              <p>(9)</p>
-            </li>
-            <li>
-              <p>Druid</p>
-              <p>(12)</p>
-            </li>
-            <li>
-              <p>Paladin</p>
-              <p>(2)</p>
-            </li>
+            <!-- Classes generated -->
           </ul>
           <h2>Filter by Level</h2>
           <div class="horizontal-divider"></div>
           <div class="level-filter">
-            <div class="level-control">
-              <i class="fas fa-minus"></i>
-            </div>
-            <div class="current-level">3</div>
-            <div class="level-control">
-              <i class="fas fa-plus"></i>
-            </div>
+            <!-- Level controls generated -->
           </div>
           <div class="favorites-filter round-pill">
             <h2>Favorites</h2>
@@ -79,20 +54,14 @@
             <!-- Spell list populated by JavaScript -->
           </div>
           <ul class="spell-list-controls">
-            <li class="page" data-page="prev">
-              <i class="fas fa-chevron-left"></i>
-            </li>
-            <li></li>
-            <li class="current-page" data-page="1">1</li>
-            <li class="page" data-page="2">2</li>
-            <li>...</li>
-            <li class="page" data-page="next">
-              <i class="fas fa-chevron-right"></i>
-            </li>
+            <!-- Pagination -->
           </ul>
         </div>
       </section>
     </main>
+    <script src="/js/lib.js"></script>
+    <script src="/js/filters.js"></script>
+    <script src="/js/pagination.js"></script>
     <script src="/js/modals.js"></script>
     <script src="/js/main.js"></script>
   </body>
