--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <div class="sidebar">
           <h2>Filter by School</h2>
           <div class="horizontal-divider"></div>
-          <ul class="class-filters">
-            <!-- Classes generated -->
+          <ul class="school-filters">
+            <!-- Schools generated -->
           </ul>
           <h2>Filter by Level</h2>
           <div class="horizontal-divider"></div>
@@ -60,9 +60,11 @@
       </section>
     </main>
     <script src="/js/lib.js"></script>
+    <script src="/js/spell-block.js"></script>
     <script src="/js/filters.js"></script>
     <script src="/js/pagination.js"></script>
     <script src="/js/modals.js"></script>
     <script src="/js/main.js"></script>
+    <script src="/js/theme.js"></script>
   </body>
 </html>
