--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!-- Level controls generated -->
           </div>
           <div class="favorites-filter round-pill">
-            <h2>Favorites</h2>
+            <!-- Favorites button -->
           </div>
         </div>
         <div class="spell-list">
