--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
           <h1>D&D 5e Spells</h1>
         </div>
         <div class="searchbar">
-          <input type="text" name="search" placeholder="search spells..." />
-          <i class="fas fa-search"></i>
+          <!-- Searchbar -->
         </div>
       </section>
       <section class="bottom-section container">
@@ -38,12 +37,12 @@
           <h2>Filter by School</h2>
           <div class="horizontal-divider"></div>
           <ul class="school-filters">
-            <!-- Schools generated -->
+            <!-- Schools -->
           </ul>
           <h2>Filter by Level</h2>
           <div class="horizontal-divider"></div>
           <div class="level-filter">
-            <!-- Level controls generated -->
+            <!-- Level controls -->
           </div>
           <div class="favorites-filter round-pill">
             <!-- Favorites button -->
