--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/base.css" />
     <link rel="stylesheet" href="/css/theme.css" />
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/media.css" />
     <title>D&D 5e Spell Catalog</title>
   </head>
   <body>
@@ -34,6 +35,10 @@
       </section>
       <section class="bottom-section container">
         <div class="sidebar">
+          <div class="filters-menu">
+            <h2>Filters</h2>
+            <i class="fas fa-chevron-up"></i>
+          </div>
           <h2>Filter by School</h2>
           <div class="horizontal-divider"></div>
           <ul class="school-filters">
