searchbar update and refactor

--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
         </div>
       </section>
     </main>
+    <script src="/js/data.js"></script>
     <script src="/js/lib.js"></script>
     <script src="/js/spell-block.js"></script>
     <script src="/js/filters.js"></script>
+    <script src="/js/searchbar.js"></script>
     <script src="/js/pagination.js"></script>
     <script src="/js/modals.js"></script>
     <script src="/js/main.js"></script>
