--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <script src="/js/filters.js"></script>
     <script src="/js/searchbar.js"></script>
     <script src="/js/pagination.js"></script>
-    <script src="/js/modals.js"></script>
+    <script src="/js/modal.js"></script>
     <script src="/js/main.js"></script>
     <script src="/js/theme.js"></script>
   </body>
